# VirtualCellModel

./: .gitignore  Average_Membrane_Node_Distance.cpp  Elastic_Force_Calculator.cpp  General_constants.h  General_functions.cpp  How_to_use_doxygen.docx  Makefile  Makefile.NodesOnSphere  Makefile.analysis  Membrane.h  Membrane_MD_Evolution.cpp  Membrane_Triangle_Pair_and_Edges_Identifier.cpp  Membrane_node_neighbour_list.cpp  Membrane_normal_direction_identifier.cpp  Membrane_num_of_Node_Pair_Counter.cpp  Membrane_num_of_Node_Pair_Counter_2.cpp  Membrane_read_functions.cpp  Membrane_triangle_pair_counter.cpp  README.md  README.rst  Tiam_POV.cpp  VCM.py  bingen.txt  conf_doc  doc_config  main.cpp  main_old.cpp  pyproject.toml  setup.cfg  setup.py  write_functions.cpp  write_functions.hpp
Doc/: Coding Style.md  Commenting Style.md  Doxyfile  IDE Setup.md
ECM/: ECM.hpp
Include/: Actin.h  Bussi_Thermostat.hpp  Chromatin.h  ECM.h  ECM.hpp  General_constants.h  General_functions.hpp  Global_functions.hpp  Membrane.h  interaction.hpp  maps.hpp  point_particle.h  write_functions.hpp
Membrane_OBJ/: General_constants.h  General_functions.cpp  General_functions.hpp  Membrane.h  Membrane_normal_direction_identifier.cpp  Membrane_read_functions.cpp  main.cpp
Membrane_OBJ.xcodeproj/: project.pbxproj
doc/: Doxyfile  _chromatin_8h_source.html  _coding___style_8md.html  _global__functions_8hpp.html  class_chromatin.html  class_e_c_m-members.html  files.html  files_dup.js  functions_func.html  functions_g.html  functions_n.html  functions_p.html  functions_t.html  functions_vars.html  functions_z.html  (+4 more)
(+3204 files in other folders)
